--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -1,25 +1,34 @@
 
-	<form :id="'bankAccount-input-form_' + _uid">
+	<form :id="bankAccount-input-form" action={{ action }} method="post">
+		<input type="hidden" name="bankId" 	value={{ bankId }}>
+		<input type="hidden" name="orderId" value={{ orderId }}>
+
 			<div class="modal-header">
-				<button class="close" >
-					<span aria-hidden="true">x</span>
-				</button>
+				{% if checkout|trim is empty %}
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">x</span>
+					</button>
+				{% else %}
+					<button class="close" >
+                    	<span aria-hidden="true">x</span>
+                    </button>
+				{% endif %}
 				<h4 class="modal-title">{{ trans("Debit::PaymentMethod.bankDetails") }}</h4>
 			</div>
 
             <div class="modal-body form-horizontal row">
                 <div class="col-xs-12">
                     <div class="input-unit">
-                        <label :for="'bankAccountOwner-input_' + _uid">{{ trans("Debit::PaymentMethod.bankAccountOwner") }} *</label>
-                        <input type="text" :id="'bankAccountOwner-input_' + _uid" v-model="bankAccountOwner" value={{ bankAccountOwner }}>
+                        <label :for="bankAccountOwner">{{ trans("Debit::PaymentMethod.bankAccountOwner") }} *</label>
+                        <input type="text" name="bankAccountOwner" value={{ bankAccountOwner }}>
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="input-group">
                         <div class="input-unit" data-validate="text">
-                            <label :for="'bankName-input-id_' + _uid">{{ trans("Debit::PaymentMethod.bankName") }} *</label>
-                            <input type="text" :id="'bankName-input-id_' + _uid" v-model="bankName" value={{ bankName }}>
+                            <label :for="bankName">{{ trans("Debit::PaymentMethod.bankName") }} *</label>
+                            <input type="text" name="bankName" value={{ bankName }}>
                         </div>
                     </div>
                 </div>
@@ -27,8 +36,8 @@
                 <div class="col-xs-12">
                     <div class="input-group">
                         <div class="input-unit" data-validate="text">
-                            <label :for="'bankIban-input-id_' + _uid">{{ trans("Debit::PaymentMethod.bankIban") }} *</label>
-                            <input type="text" :id="'bankIban-input-id_' + _uid" v-model="bankIban" value={{ bankIban }}>
+                            <label :for="bankIban">{{ trans("Debit::PaymentMethod.bankIban") }} *</label>
+                            <input type="text" name="bankIban" value={{ bankIban }}>
                         </div>
                     </div>
                 </div>
@@ -36,15 +45,15 @@
                 <div class="col-xs-12">
                     <div class="input-group">
                         <div class="input-unit" data-validate="text">
-                            <label :for="'bankSwift-input-id_' + _uid">{{ trans("Debit::PaymentMethod.bankSwift") }} *</label>
-                            <input type="text" :id="'bankSwift-input-id_' + _uid" v-model="bankSwift"  value={{ bankSwift }}>
+                            <label :for="bankSwift">{{ trans("Debit::PaymentMethod.bankSwift") }} *</label>
+                            <input type="text" name="bankSwift" value={{ bankSwift }}>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="modal-footer">
-            	<button type="button" class="btn btn-block" :class="buttonClasses" @click="validateData" :disabled="isDisabled">
+            	<button type="submit" class="btn btn-block" :class="buttonClasses">
                 	<i v-waiting-animation="isDisabled" class="fa fa-arrow-right" aria-hidden="true"></i>
                    	{{ trans("Debit::PaymentMethod.bankAccountButtonLabel") }}
             	</button>
