--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -19,33 +19,33 @@
                 <div class="col-xs-12">
                     <div class="input-unit">
                         <label :for="bankAccountOwner">{{ trans("Debit::PaymentMethod.bankAccountOwner") }} *</label>
-                        <input type="text" name="bankAccountOwner" value={{ bankAccountOwner }}>
+                        <input type="text" name="bankAccountOwner" value={{ bankAccountOwner }} required>
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="input-group">
-                        <div class="input-unit" data-validate="text">
+                        <div class="input-unit">
                             <label :for="bankName">{{ trans("Debit::PaymentMethod.bankName") }} *</label>
-                            <input type="text" name="bankName" value={{ bankName }}>
+                            <input type="text" name="bankName" value={{ bankName }} required>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="input-group">
-                        <div class="input-unit" data-validate="text">
+                        <div class="input-unit">
                             <label :for="bankIban">{{ trans("Debit::PaymentMethod.bankIban") }} *</label>
-                            <input type="text" name="bankIban" value={{ bankIban }}>
+                            <input type="text" name="bankIban" value={{ bankIban }} required>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="input-group">
-                        <div class="input-unit" data-validate="text">
-                            <label :for="bankSwift">{{ trans("Debit::PaymentMethod.bankSwift") }} *</label>
-                            <input type="text" name="bankSwift" value={{ bankSwift }}>
+                        <div class="input-unit">
+                            <label :for="bankBic">{{ trans("Debit::PaymentMethod.bankBic") }} *</label>
+                            <input type="text" name="bankBic" value={{ bankBic }} required>
                         </div>
                     </div>
                 </div>
