fix payment properties remove unused class some refactoring

--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -52,8 +52,8 @@
 
                 <div class="col-xs-12">
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" name="sepaCheck" required>
-                        <label class="form-check-label" for="sepaCheck">{{ trans("Debit::PaymentMethod.sepaAgreement") }} *</label>
+                        <input type="checkbox" class="form-check-input" name="debitMandate" required>
+                        <label class="form-check-label" for="debitMandate">* {{ trans("Debit::PaymentMethod.debitMandate") }}</label>
                       </div>
                 </div>
             </div>
