--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -53,7 +53,7 @@
                 <div class="col-xs-12">
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" name="debitMandate" required>
-                        <label class="form-check-label" for="debitMandate">* {{ trans("Debit::PaymentMethod.debitMandate") }}</label>
+                        <label class="form-check-label" for="debitMandate">* {{ trans("Debit::PaymentMethod.paymentMethodDebitMandate") }}</label>
                       </div>
                 </div>
             </div>
