--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -19,15 +19,15 @@
                 <div class="col-xs-12">
                     <div class="input-unit">
                         <label :for="bankAccountOwner">{{ trans("Debit::PaymentMethod.bankAccountOwner") }} *</label>
-                        <input type="text" name="bankAccountOwner" value="{{ bankAccountOwner }}" required>
+                        <input type="text" name="bankAccountOwner" value="{{ bankAccountOwner }}" required="required">
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="input-group">
                         <div class="input-unit">
-                            <label :for="bankName">{{ trans("Debit::PaymentMethod.bankName") }} *</label>
-                            <input type="text" name="bankName" value="{{ bankName }}" required>
+                            <label :for="bankName">{{ trans("Debit::PaymentMethod.bankName") }}</label>
+                            <input type="text" name="bankName" value="{{ bankName }}">
                         </div>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                     <div class="input-group">
                         <div class="input-unit">
                             <label :for="bankIban">{{ trans("Debit::PaymentMethod.bankIban") }} *</label>
-                            <input type="text" name="bankIban" value="{{ bankIban }}" required>
+                            <input type="text" name="bankIban" value="{{ bankIban }}" required="required" pattern="[a-zA-Z]{2}[0-9]{2}[a-zA-Z0-9]{4}[0-9]{7}([a-zA-Z0-9]?){0,16}" maxlength="32" title="{{ trans('Debit::PaymentMethod.bankIban') }}">
                         </div>
                     </div>
                 </div>
@@ -45,14 +45,14 @@
                     <div class="input-group">
                         <div class="input-unit">
                             <label :for="bankBic">{{ trans("Debit::PaymentMethod.bankBic") }} *</label>
-                            <input type="text" name="bankBic" value="{{ bankBic }}" required>
+                            <input type="text" name="bankBic" value="{{ bankBic }}" required="required" pattern="([a-zA-Z]{4}[a-zA-Z]{2}[a-zA-Z0-9]{2}([a-zA-Z0-9]{3})?)" title="{{ trans('Debit::PaymentMethod.bankBic') }}">
                         </div>
                     </div>
                 </div>
 
                 <div class="col-xs-12">
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" name="debitMandate" required>
+                        <input type="checkbox" class="form-check-input" name="debitMandate" {{ debitMandate }} required="required">
                         <label class="form-check-label" for="debitMandate">* {{ trans("Debit::PaymentMethod.paymentMethodDebitMandate") }}</label>
                       </div>
                 </div>
