--- a/resources/views/DebitReinitializePayment.twig
+++ b/resources/views/DebitReinitializePayment.twig
@@ -11,7 +11,7 @@
         {% set paidStatus = property.value %}
     {% endif %}
 {% endfor %}
-{% if (paymentId == paymentMethodId) and (paidStatus != 'fullyPaid') and (order.status < 4) %}
+{% if (paymentId == paymentMethodId) and (paidStatus != 'fullyPaid') and (order.status < 4 ) and (paymentExists == false) %}
     {% set display = "block" %}
 {% else %}
     {% set display = "none" %}
