add description tags for assistant add abort button in bank overlay do not require any delivery country in debit assistant load debit option from customer correctly

--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -59,6 +59,15 @@
             </div>
 
             <div class="modal-footer">
+            	{% if checkout|trim is empty %}
+            		<button type="button" class="btn btn-secondary" :class="buttonClasses" data-dismiss="modal" aria-label="Close">
+            			{{ trans("Debit::PaymentMethod.bankAccountCancelButtonLabel") }}
+            		</button>
+            	{% else %}
+            		<button type="button" onClick="window.location.reload()" class="btn btn-secondary" :class="buttonClasses">
+            			{{ trans("Debit::PaymentMethod.bankAccountCancelButtonLabel") }}
+            		</button>
+            	{% endif %}
             	<button type="submit" class="btn btn-primary" :class="buttonClasses">
                 	{{ trans("Debit::PaymentMethod.bankAccountButtonLabel") }}
             	</button>
