--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -52,9 +52,8 @@
 
                 <div class="col-xs-12">
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" name="debitMandate" {{ debitMandate }} required="required">
-                        <label class="form-check-label" for="debitMandate">* {{ trans("Debit::PaymentMethod.paymentMethodDebitMandate") }}</label>
-                      </div>
+                        <label class="form-check-label"><input type="checkbox" class="form-check-input" name="debitMandate" {{ debitMandate }} required="required">* {{ trans("Debit::PaymentMethod.paymentMethodDebitMandate") }}</label>
+                    </div>
                 </div>
             </div>
 
