Disable submit button upon submit form, to make sure, that only one order is created, otherwise it would be possible to click the button more than once, which results into multiple created orders.

--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -1,4 +1,9 @@
 
+<script type="text/javascript">
+    $("#bankAccount-input-form").submit(function(e) {
+        $(".btn-primary").attr("disabled",true);
+    });
+</script>
 	<form :id="bankAccount-input-form" action={{ action }} method="post">
 		<input type="hidden" name="bankId" 	value={{ bankId }}>
 		<input type="hidden" name="orderId" value={{ orderId }}>
