cleanup (remove : before the id definition, otherwise jquery/javascript would not know which field to access=

--- a/resources/views/BankDetailsOverlay.twig
+++ b/resources/views/BankDetailsOverlay.twig
@@ -4,7 +4,7 @@
         $(".btn-primary").attr("disabled",true);
     });
 </script>
-	<form :id="bankAccount-input-form" action={{ action }} method="post">
+	<form id="bankAccount-input-form" action={{ action }} method="post">
 		<input type="hidden" name="bankId" 	value={{ bankId }}>
 		<input type="hidden" name="orderId" value={{ orderId }}>
 			<div class="modal-header">
